feat: added /ftbpc place_jigsaw command
Pretty much equivalent to the /place jigsaw command in 1.19

--- a/common/src/main/resources/assets/ftbpc/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbpc/lang/en_us.json
@@ -1,2 +1,5 @@
 {
+  "commands.place.jigsaw.failed": "Failed to generate jigsaw",
+  "commands.place.jigsaw.invalid": "There is no template pool with type \"%s\"",
+  "commands.place.jigsaw.success": "Generated jigsaw at %s, %s, %s"
 }
