--- a/src/main/resources/assets/ftbpc/lang/pt_br.json
+++ b/src/main/resources/assets/ftbpc/lang/pt_br.json
@@ -1,5 +1,17 @@
 {
-  "ftbpackcompanion.pause.mods": "(%s) Mods",
-  "ftbpackcompanion.tooltip.support_discord": "Precisa de ajuda? Entre em nosso servidor Discord!",
-  "ftbpackcompanion.tooltip.support_github": "Encontrou um bug? Reporte isso no GitHub!"
+  "block.ftbpc.trigger_block": "Acionador de Jogador",
+  "ftbpackcompanion.actionpad.tpa.request_sent": "Pedido de teletransporte enviado para",
+  "ftbpackcompanion.home": "Casa",
+  "ftbpackcompanion.key.category": "Pack Companion",
+  "ftbpackcompanion.key.open_action_pad": "Abrir Painel de Ações",
+  "ftbpackcompanion.shaders_notice.no_shaders.description": "Shaders foram incluídos neste pacote, mas estão desativados por padrão. Gostaria de ativá-los? Shaders podem consumir muita performance, causar problemas com certos mods e podem não ser compatíveis com seu hardware.",
+  "ftbpackcompanion.shaders_notice.no_shaders.title": "Sem Shaders",
+  "ftbpackcompanion.shaders_notice.shaders.description": "Se você deseja Shaders, pode ativá-los aqui para experimentar o pacote com um visual vibrante. Caso encontre algum problema, você pode desativá-los a qualquer momento nas configurações de vídeo.",
+  "ftbpackcompanion.shaders_notice.shaders.title": "Shaders",
+  "ftbpackcompanion.shaders_notice.shaders_btn.disable": "Desativar Shaders",
+  "ftbpackcompanion.shaders_notice.shaders_btn.enable": "Ativar Shaders",
+  "ftbpackcompanion.shaders_notice.title": "Gostaria de usar Shaders?",
+  "ftbpackcompanion.spawn": "Ponto de Geração",
+  "ftbpackcompanion.tpa": "Pedir Teletransporte",
+  "item.ftbpc.action_pad": "Painel de Ações"
 }
