Updated PT_BR localization

--- a/src/main/resources/assets/ftbpc/lang/pt_br.json
+++ b/src/main/resources/assets/ftbpc/lang/pt_br.json
@@ -1,17 +1,21 @@
 {
-  "block.ftbpc.trigger_block": "Acionador de Jogador",
-  "ftbpackcompanion.actionpad.tpa.request_sent": "Pedido de teletransporte enviado para",
-  "ftbpackcompanion.home": "Casa",
+  "block.ftbpc.trigger_block": "Ativador de Jogador",
+  "ftbpackcompanion.actionpad.tpa.request_sent": "Pedido de TP enviado para",
+  "ftbpackcompanion.command.bypass.added": "Adicionado %s à lista de ignorar modo de jogo forçado.",
+  "ftbpackcompanion.command.bypass.no-players": "Nenhum jogador está atualmente na lista de ignorar modo de jogo forçado.",
+  "ftbpackcompanion.command.bypass.removed": "Removido %s da lista de ignorar modo de jogo forçado.",
+  "ftbpackcompanion.command.fixed": "Modo de jogo corrigido para o jogador %s.",
+  "ftbpackcompanion.home": "Home",
   "ftbpackcompanion.key.category": "Pack Companion",
-  "ftbpackcompanion.key.open_action_pad": "Abrir Painel de Ações",
-  "ftbpackcompanion.shaders_notice.no_shaders.description": "Shaders foram incluídos neste pacote, mas estão desativados por padrão. Gostaria de ativá-los? Shaders podem consumir muita performance, causar problemas com certos mods e podem não ser compatíveis com seu hardware.",
-  "ftbpackcompanion.shaders_notice.no_shaders.title": "Sem Shaders",
-  "ftbpackcompanion.shaders_notice.shaders.description": "Se você deseja Shaders, pode ativá-los aqui para experimentar o pacote com um visual vibrante. Caso encontre algum problema, você pode desativá-los a qualquer momento nas configurações de vídeo.",
+  "ftbpackcompanion.key.open_action_pad": "Abrir Action Pad",
+  "ftbpackcompanion.shaders_notice.no_shaders.description": "Shaders foram incluídos neste pacote, mas estão desativados por padrão. Gostaria de ativá-los? Shaders podem exigir muito desempenho, causar problemas com certos mods e podem não ser compatíveis com o seu hardware.",
+  "ftbpackcompanion.shaders_notice.no_shaders.title": "Sem shaders",
+  "ftbpackcompanion.shaders_notice.shaders.description": "Se você deseja shaders, pode ativá-los aqui para experimentar o pacote com um visual vibrante. Se encontrar qualquer problema, você sempre poderá desativá-los mais tarde nas configurações de vídeo.",
   "ftbpackcompanion.shaders_notice.shaders.title": "Shaders",
-  "ftbpackcompanion.shaders_notice.shaders_btn.disable": "Desativar Shaders",
-  "ftbpackcompanion.shaders_notice.shaders_btn.enable": "Ativar Shaders",
-  "ftbpackcompanion.shaders_notice.title": "Gostaria de usar Shaders?",
-  "ftbpackcompanion.spawn": "Ponto de Geração",
-  "ftbpackcompanion.tpa": "Pedir Teletransporte",
-  "item.ftbpc.action_pad": "Painel de Ações"
+  "ftbpackcompanion.shaders_notice.shaders_btn.disable": "Desativar shaders",
+  "ftbpackcompanion.shaders_notice.shaders_btn.enable": "Ativar shaders",
+  "ftbpackcompanion.shaders_notice.title": "Gostaria de usar shaders?",
+  "ftbpackcompanion.spawn": "Spawn",
+  "ftbpackcompanion.tpa": "Solicitar Teleporte",
+  "item.ftbpc.action_pad": "Painel de Ação"
 }
